...
                android:id="@+id/email_separator"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/email_layout" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/email_view"
                android:layout_width="@dimen/profile_itemImage_size"
                android:layout_height="@dimen/profile_itemImage_size"
                android:tint="@color/colorAccent"
...
                android:paddingVertical="@dimen/profile_itemAlone_paddingVertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_hint"
                    android:textColor="@android:color/primary_text_light"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...
                android:id="@+id/user_separator"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/userName_layout" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/user_view"
                android:layout_width="@dimen/profile_itemImage_size"
                android:layout_height="@dimen/profile_itemImage_size"
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/userName_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userSurname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/profile_itemText_marginLeft"
                android:onClick="@{() -> viewModel.onEditSurname()}"
                android:paddingVertical="@dimen/profile_itemText_paddingVertical"
                app:layout_constraintLeft_toLeftOf="parent"
...
                    android:text="@string/user_surname_hint"
                    android:textColor="@android:color/primary_text_light"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.surname}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/surname"
                    tools:text="Name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userNickname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/profile_itemText_marginLeft"
                android:onClick="@{() -> viewModel.onEditNickname()}"
                android:paddingVertical="@dimen/profile_itemText_paddingVertical"
                app:layout_constraintLeft_toLeftOf="parent"
...
                    android:text="@string/user_nickname_hint"
                    android:textColor="@android:color/primary_text_light"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.nickname}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nickname"
                    tools:text="Nickname" />
...
                    android:text="@string/user_name_hint"
                    android:textColor="@android:color/primary_text_light"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:text="Name" />
...
