<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_footer_dialog"
        android:padding="15dp">

        <TextView
            android:id="@+id/edit_title_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/first_editProfile_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/first_editProfile_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.firstEditableText}"
            app:layout_constraintBottom_toTopOf="@id/edit_title_second"
            app:layout_constraintTop_toBottomOf="@id/edit_title_first" />

        <TextView
            android:id="@+id/edit_title_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/second_editProfile_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_editProfile_editText" />

        <EditText
            android:id="@+id/second_editProfile_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.secondEditableText}"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/edit_title_third"
            app:layout_constraintTop_toBottomOf="@id/edit_title_second" />

        <TextView
            android:id="@+id/edit_title_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/third_editProfile_editText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_editProfile_editText" />

        <EditText
            android:id="@+id/third_editProfile_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.thirdEditableText}"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/edit_profile_done"
            app:layout_constraintTop_toBottomOf="@id/edit_title_third" />



        <TextView
            android:id="@+id/edit_profile_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:onClick="@{() -> viewModel.onEditAction(viewModel.ACTION_DONE)}"
            android:text="@string/done"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_editProfile_editText" />

        <TextView
            android:id="@+id/edit_profile_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:onClick="@{() -> viewModel.onEditAction(viewModel.ACTION_CANCEL)}"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/edit_profile_done"
            app:layout_constraintRight_toLeftOf="@id/edit_profile_done" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/edit_profile_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/edit_profile_cancel"
            app:layout_constraintHeight_max="400dp"
            app:layout_constraintTop_toBottomOf="@id/edit_title_first">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/edit_profile_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="omega.isaacbenito.saberapp.user.model.UserViewModel" />
    </data>
</layout>