<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of SaberApp.
  ~
  ~     SaberApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     SaberApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with SaberApp.  If not, see <https://www.gnu.org/licenses/>.
  -->

<!DOCTYPE resources [
    <!ENTITY appname "SaberApp">
    <!ENTITY version "1.0.0">
    ]>

<resources>
    <string name="app_name" translatable="false">SaberApp</string>
    <string name="app_version" translatable="false">1.0.0</string>

    <!--  Transitions  -->
    <string name="start_login_logo_transition" translatable="false">start_login_logo_transition</string>

    <!-- Navigation Drawer -->
    <string name="menu_saberapp_rules">Rules</string>
    <string name="menu_about_saberapp">About</string>

    <!-- Authentication -->
    <string name="user_email_hint">Email address</string>
    <string name="user_name_hint">Name</string>
    <string name="user_surname_hint">Surname</string>
    <string name="user_nickname_hint">Nickname</string>
    <string name="user_password_hint">Password</string>
    <string name="user_password_repeat_hint">Repeat password</string>

    <string name="user_signIn">Log In</string>
    <string name="user_signUp">Register</string>

    <string name="new_user">New user?</string>
    <string name="already_member">Already a member?</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 8 characters long and must contain an upper case, a lower case a number and a symbol</string>

    <string name="login_failed">"Login failed"</string>
    <string name="server_unreachable">Server Unreachable</string>
    <string name="wrong_credentials">Wrong username or password</string>

    <!-- Network Availability -->
    <string name="no_network">No network connection</string>

    <string name="name_format" translatable="false">%s %s</string>
    <string name="nickname_format" translatable="false">\@%s</string>

    <string name="choose_centre">Choose your school</string>
    <string name="prgunta_dia">Today\'s Question</string>
    <string name="preguntes_antigues">Old questions</string>
    <string name="revisar_respostes">Review answers</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="invalid_email">Must enter a valid email address</string>
    <string name="invalid_password_repeat">Passwords must be the same</string>
    <string name="invalid_name">Please check your name and surname</string>
    <string name="invalid_nickname">This is not a valid nickname. \n Nicknames can include upper and lowercase letters . - and _</string>
    <string name="unregister">Unregister</string>
    <string name="change_password">Change Password</string>
    <string name="unregister_unknown_error">Unable to unregister due to an unknown error. Please try again later.</string>
    <string name="user_profile">Profile</string>
    <string name="user_centre_hint">School</string>
    <string name="edit_name">Write your name</string>
    <string name="edit_surname">Write your surname</string>
    <string name="edit_nickname">Write your nickname</string>
    <string name="edit_password">New password</string>
    <string name="edit_password_repeat">Repeat password</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="old_password">Old password</string>
    <string name="filter">Filter</string>
    <string name="save_answer">Do you want to save the answer?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="sourcecode">"This project is allocated in https://github.com/oitantksi/SaberApp</string>
    <string name="info_problems">You can report errors, propose improvements and apply for characteristics on the issu traking system of this GitHub project: https://github.com/oitantksi/SaberApp/issues</string>
    <string name="info_problems_title">ISSUES</string>
    <string name="translation_title">TRANSLATION</string>
    <string name="translation">To help us translate this app to your language please contact us on: translate@omega.org</string>
    <string name="version_title">VERSION</string>
    <string name="version">You are currently using <b>v&version;</b></string>
    <string name="developer_title">DEVELOPERS</string>
    <string name="developer">Isaac Benito, Montserrat Camps, Ramón Hernández</string>
    <string name="credits">CREDITS</string>
    <string name="contributing">CONTRIBUTING</string>
    <string name="mantainers_title">MANTAINERS</string>
    <string name="mantainers">Isaac Benito</string>
    <string name="testers_title">TESTERS</string>
    <string name="testers">Isaac Benito</string>
    <string name="translators_title">TRANSLATORS</string>
    <string name="translators">Isaac Benito</string>
    <string name="license_title">APP LICENSE</string>
    <string name="license">This app is lincensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License v3.0</a></string>
    <string name="view_license">VIEW LICENSE</string>
    <string name="icons_title">ICONS</string>
    <string name="icons">App icon made by Montserrat Camps.\n\nTo create this project we\'ve used many resources from:\n\n\t- <a href="https://www.freepik.es/">Freepik</a>\n\n\t- <a href="https://www.flaticon.com/">Flaticon</a>\n\n\t- <a href="https://material.io/resources/icons/">Android Material Design Icons</a></string>
    <string name="licensing">LICENSE</string>
    <string name="apply">Apply</string>
    <string name="profile_picture_file">profile</string>


</resources>
