...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/userMainFragment">


    <fragment
        android:id="@+id/userProfileFragment"
        android:name="omega.isaacbenito.saberapp.user.ui.UserProfileFragment"
        android:label="@string/user_profile"/>
    <fragment
        android:id="@+id/userMainFragment"
        android:name="omega.isaacbenito.saberapp.user.ui.UserMainFragment"
        android:label="@string/app_name">
...
